# neoml

./: .gitignore  .readthedocs.yml  CopyResults.mak  Main.bld  Publish.txt  README.md  Sources.txt  THIRD-PARTY-LICENSES.md
NeoML/: CMakeLists.txt  NeoML.rc  NeoMLMessages.msg  NeoMLMessagesStub.cpp  RCa33844
NeoML/Java/: build.gradle  settings.gradle
NeoML/Java/inference/: build.gradle
NeoML/Java/test/: build.gradle
NeoML/Python/: CMakeLists.txt  MANIFEST.in  README.txt  setup.cfg  setup.py  tests.py
NeoML/Python/neoml/: Argmax.py  AttentionDecoder.py  AutoDiff.py  Blob.py  BytePairEncoder.py  ChannelwiseConv.py  Clustering.py  ConcatChannels.py  Conv.py  CrossValidation.py  DecisionTree.py  DifferentialEvolution.py  Dnn.py  Eltwise.py  FirstCome.py  FullyConnected.py  GradientBoost.py  Hierarchical.py  Initializer.py  IsoData.py  KMeans.py  Linear.py  Loss.py  Lstm.py  MathEngine.py  MultichannelLookup.py  OneVersusAll.py  PCA.py  Pooling.py  Random.py  ReLU.py  SVM.py  Sink.py  Solver.py  Source.py  Utils.py  __init__.py
NeoML/Python/src/: PyAccumulativeLookupLayer.cpp  PyAccumulativeLookupLayer.h  PyAccuracyLayer.cpp  PyAccuracyLayer.h  PyActivationLayer.cpp  PyActivationLayer.h  PyAddToObjectLayer.cpp  PyAddToObjectLayer.h  PyArgmaxLayer.cpp  PyArgmaxLayer.h  PyAttentionDecoderLayer.cpp  PyAttentionDecoderLayer.h  PyAutoDiff.cpp  PyAutoDiff.h  PyBaseConvLayer.cpp  PyBaseConvLayer.h  PyBatchNormalizationLayer.cpp  PyBatchNormalizationLayer.h  PyBertConvLayer.cpp  PyBertConvLayer.h  PyBinarizationLayer.cpp  PyBinarizationLayer.h  PyBroadcastLayer.cpp  PyBroadcastLayer.h  PyBytePairEncoder.cpp  PyBytePairEncoder.h  PyCastLayer.cpp  PyCastLayer.h  PyChannelwiseConvLayer.cpp  PyChannelwiseConvLayer.h  PyClustering.cpp  PyClustering.h  PyConcatChannelsLayer.cpp  PyConcatChannelsLayer.h  PyConcatLayer.cpp  PyConcatLayer.h  PyConvLayer.cpp  PyConvLayer.h  PyCrfLayer.cpp  PyCrfLayer.h  (+112 more)
NeoML/docs/en/: Onnx.md  conf.py  environment.yml  requirements.txt
NeoML/docs/ru/: Onnx.md  README.md
NeoML/include/NeoML/: ArchiveFile.h  Buffer.h  NeoML.h  NeoMLCommon.h  NeoMLDefs.h  Platforms.h  Random.h
NeoML/objc/: CMakeLists.txt  NeoInference.h  NeoInference.mm
NeoML/samples/data/: TextNotTextClassifier.dnn
NeoML/samples/python/: boosting.py  cifar10.py  irnn.py  kmeans.py  linear.py  regressor.py
NeoML/src/: ArchiveFile.cpp  CMakeLists.txt  NeoML.cpp  NeoML.natvis  Random.cpp  common.h
NeoML/src/Dnn/: AutoDiff.cpp  AutoDiffFunctions.cpp  BaseLayer.cpp  Dnn.cpp  DnnBlob.cpp  DnnDistributed.cpp  DnnInitializer.cpp  DnnLora.cpp  DnnOptimization.cpp  DnnReferenceRegister.cpp  DnnSimpleAPI.cpp  DnnSolver.cpp  DnnSparseMatrix.cpp  ReferenceDnnFactory.cpp
NeoML/src/TraditionalML/: AIModel.cpp  Buffer.h  BytePairEncoder.cpp  BytePairEncoder.h  BytePairEncoderTrainer.cpp  BytePairEncoderTrainer.h  ClassificationProbability.cpp  ClusterCenter.cpp  CommonCluster.cpp  CompactRegressionTree.cpp  CompactRegressionTree.h  CrossValidation.cpp  CrossValidationSubProblem.cpp  CrossValidationSubProblem.h  DecisionTree.cpp  DecisionTreeClassificationModel.cpp  DecisionTreeClassificationModel.h  DecisionTreeNodeBase.cpp  DecisionTreeNodeBase.h  DecisionTreeNodeClassificationStatistic.cpp  DecisionTreeNodeClassificationStatistic.h  DecisionTreeNodeStatisticBase.h  DecisionTreeTrainingModel.cpp  DifferentialEvolution.cpp  EMClustering.cpp  FeatureSelection.cpp  FirstComeClustering.cpp  FloatMatrix.cpp  FloatVector.cpp  Function.cpp  FunctionEvaluation.cpp  GradientBoost.cpp  GradientBoostFastHistProblem.cpp  GradientBoostFastHistProblem.h  GradientBoostFastHistTreeBuilder.cpp  GradientBoostFastHistTreeBuilder.h  GradientBoostFullProblem.cpp  GradientBoostFullProblem.h  GradientBoostFullTreeBuilder.cpp  GradientBoostFullTreeBuilder.h  (+70 more)
NeoML/test/: PcaTest  distributed  distributedSerialized  iterative_gb  test_archive.new_ver  test_solver
NeoML/test/data/: MobileNetV2Cifar10.in.input  MobileNetV2Cifar10.out.output  transformerLoraOld.Q.input  transformerLoraOld.cnnarch  transformerLoraOld.out.output  transformerLoraOld.widths.input
NeoML/test/desktop/: CMakeLists.txt  main.cpp
NeoML/test/src/: AutoDiffTest.cpp  BatchNormFusionTest.cpp  BpeTest.cpp  CMakeLists.txt  ChannelwiseWith1x1BlockTest.cpp  ClassificationAndRegressionTest.cpp  ClassificationTest.cpp  ClusteringTest.cpp  CtcTest.cpp  DenseMemoryProblem.cpp  DenseMemoryProblem.h  (+51 more)
NeoMathEngine/: CMakeLists.txt  NeoMathEngine.rc  RCa22824
NeoMathEngine/src/: CMakeLists.txt  CrtAllocatedObject.cpp  DllLoader.cpp  DllLoader.h  MathEngine.cpp  MathEngineAllocator.h  MathEngineCommon.h  MathEngineDeviceStackAllocator.cpp  MathEngineDeviceStackAllocator.h  MathEngineDll.h  MathEngineDnnActivation.h  MathEngineDnnConv.h  MathEngineDnnDropout.cpp  MathEngineDnnDropout.h  MathEngineDnnLrn.h  MathEngineDnnLstm.h  MathEngineDnnPoolings.h  MathEngineHostStackAllocator.cpp  MathEngineHostStackAllocator.h  MathEngineStackAllocator.cpp  MathEngineStackAllocator.h  MemoryEngine.cpp  MemoryEngine.h  MemoryEngineMixin.cpp  MemoryEngineMixin.h  MemoryHandleInternal.h  MemoryPool.cpp  MemoryPool.h  PerformanceCountersDefault.h  RawMemoryManager.h  ThreadPool.cpp  common.h
NeoOnnx/: CMakeLists.txt  NeoOnnx.rc  NeoOnnx.version.in  protobuf.patch
NeoOnnx/Onnx2NeoML/: CMakeLists.txt  Onnx2NeoML.cpp
NeoOnnx/src/: AttributeGetters.h  AttributeGetters.inl  CMakeLists.txt  DnnBuilder.cpp  DnnBuilder.h  DnnOptimizer.h  Graph.h  GraphCache.h  GraphInitializer.cpp  GraphInitializer.h  GraphInput.cpp  GraphInput.h  GraphOutput.cpp  GraphOutput.h  LayerNormFusionOptimizer.cpp  LayerNormFusionOptimizer.h  LayerOperator.cpp  LayerOperator.h  LayerUtils.cpp  LayerUtils.h  NeoMLLink.h  NeoOnnx.cpp  NeoOnnxCheck.cpp  NeoOnnxCheck.h  NeoOnnxImport.cpp  Node.cpp  Node.h  NodeAttributes.cpp  NodeAttributes.h  NodeUtils.cpp  NodeUtils.h  OpNodeAttributes.cpp  OpNodeAttributes.h  Operator.cpp  Operator.h  OperatorAttributeGetters.inl  OperatorAttributes.cpp  OperatorAttributes.h  Optimizer.cpp  Optimizer.h  (+7 more)
NeoProxy/: CMakeLists.txt
NeoProxy/src/: NeoProxy.cpp
(+2256 files in other folders)
